Scale Cage doesn't work well for small/large objects #88579

Closed
opened 2021-05-25 21:56:34 +02:00 by Thomas Mann · 24 comments

System Information
Operating system: Win10
Graphics card: GTX2080

Blender Version
Broken: master 2.92 / 02948a2

Short description of error
Using the scale cage to scale an object along an axis does not work properly:

Exact steps for others to reproduce the error

  1. The click region of the handles are not correctly calculated (see video), which is hard to see, because...
  2. The control handles don't have a hover effect (like all other gizmos), and...
  3. The tool tip is only displayed for the outer pixel edge of the interaction zone.

My assumption is, that the hover regions are too large, overlapping, and not sorted correctly with results in unexpected behavior of scaling on two or three axis.

Adding a simple hover effect (2) would drastically improve the situation.

https://youtu.be/ZjJlZb-RuRE

2022-01-30_00-32-30.mp4

**System Information** Operating system: Win10 Graphics card: GTX2080 **Blender Version** Broken: master 2.92 / 02948a2 **Short description of error** Using the scale cage to scale an object along an axis does not work properly: **Exact steps for others to reproduce the error** 1. The click region of the handles are not correctly calculated (see video), which is hard to see, because... 2. The control handles don't have a hover effect (like all other gizmos), and... 3. The tool tip is only displayed for the outer pixel edge of the interaction zone. My assumption is, that the hover regions are too large, overlapping, and not sorted correctly with results in unexpected behavior of scaling on two or three axis. Adding a simple hover effect (2) would drastically improve the situation. https://youtu.be/ZjJlZb-RuRE [2022-01-30_00-32-30.mp4](https://archive.blender.org/developer/F12834186/2022-01-30_00-32-30.mp4)
Author

Added subscriber: @pixtur

Added subscriber: @pixtur

#91517 was marked as duplicate of this issue

#91517 was marked as duplicate of this issue

#90926 was marked as duplicate of this issue

#90926 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

are not correctly calculated

This sounds harsh, your comment about hover regions has a point though and it has come up in #61388 (Custom gizmo created with new_custom_shape are difficul to select.) before.

A little bit of how this works in this comment:

In #61388#1018376, @lichtwerk wrote:
Just a research note (if this ever comes into play again):

relevant functions:

  • wm_gizmomap_highlight_find
  • gizmo_find_intersected_3d
  • gizmo_find_intersected_3d_intern

If test_select is not defined specifically, this seems to go over the selection buffer and checks with 3 * U.pixelsize as well as 10 * U.pixelsize around the mouse position if it finds the gizmo in that area.
So the "margin" is defined here, lowering the value to 1 * U.pixelsize (and just provide one value) will give you a really tight selection/highlighting around your geometry.

So the situation is not perfect, esp. the hover would really help here, but it is not totally straightforward since atm. all these individual points in the scale cage are not individual wmGizmo, the whole thing is one single gizmo.
(so you could get a highlite, but only on the whole cage which is obviously not what we are after)

All in all, this does not really sound like a bug to me, more like a request for improved behavior [which this bugtracker is not meant for].
However, I would like a second pair of eyes here if the module wants to keep this as TODO.

> are not correctly calculated This sounds harsh, your comment about hover regions has a point though and it has come up in #61388 (Custom gizmo created with new_custom_shape are difficul to select.) before. A little bit of how this works in this comment: > In #61388#1018376, @lichtwerk wrote: > Just a research note (if this ever comes into play again): > > relevant functions: > - `wm_gizmomap_highlight_find` > - `gizmo_find_intersected_3d` > - `gizmo_find_intersected_3d_intern` > > If `test_select` is not defined specifically, this seems to go over the selection buffer and checks with `3 * U.pixelsize` as well as `10 * U.pixelsize` around the mouse position if it finds the gizmo in that area. > So the "margin" is defined here, lowering the value to `1 * U.pixelsize` (and just provide one value) will give you a really tight selection/highlighting around your geometry. So the situation is not perfect, esp. the hover would really help here, but it is not totally straightforward since atm. all these individual points in the scale cage are not individual `wmGizmo`, the whole thing is one single gizmo. (so you could get a highlite, but only on the whole cage which is obviously not what we are after) All in all, this does not really sound like a bug to me, more like a request for improved behavior [which this bugtracker is not meant for]. However, I would like a second pair of eyes here if the module wants to keep this as TODO.
Author

Thank you for looking into this in detail!

Regarding the question, if this is a bug, it probably depends ones subjective perspective: For me as a user, if I see a number of clearly seperate selection handles, I expect that precisely dragging one of them just works (I.e. picks the handle below the mouse pointer). In case of the scale cage, scaling on more than one axis will result in unwanted incorrect manipulations that are difficult not notice.

For me this is so annoying that I try to avoid this tool, that is designed for precisely this use case.

Thank you for looking into this in detail! Regarding the question, if this is a bug, it probably depends ones subjective perspective: For me as a user, if I see a number of clearly seperate selection handles, I expect that precisely dragging one of them just works (I.e. picks the handle below the mouse pointer). In case of the scale cage, scaling on more than one axis will result in unwanted incorrect manipulations that are difficult not notice. For me this is so annoying that I try to avoid this tool, that is designed for precisely this use case.
Member

Added subscribers: @Vyach, @PratikPB2123

Added subscribers: @Vyach, @PratikPB2123
Member

Added subscriber: @michalpe

Added subscriber: @michalpe

Hello, I want to say that it IS a bug, and it does need to be fixed. In certain views you literally point your mouse cursor right at the handle and, even though you've got a lot of free space on screen, even though you're zoomed in, so the cage covers nearly all your viewport, even then Blender may pick the wrong handle. It's not just the issue with small objects on screen. The handle sorter is just broken. I hope that the model I attached in the link below will prove it to you, devs.

See my case:
https://developer.blender.org/T91517

Hello, I want to say that it IS a bug, and it does need to be fixed. In certain views you literally point your mouse cursor right at the handle and, even though you've got a lot of free space on screen, even though you're zoomed in, so the cage covers nearly all your viewport, even then Blender may pick the wrong handle. It's not just the issue with small objects on screen. The handle sorter is just broken. I hope that the model I attached in the link below will prove it to you, devs. See my case: https://developer.blender.org/T91517

Added subscriber: @BulatKR

Added subscriber: @BulatKR

Scale Cage works mostly stably only with standard primitives - cube and plane etc, but when trying to scale a modeled object, the tool quite often stops working normally.

Scale Cage works mostly stably only with standard primitives - cube and plane etc, but when trying to scale a modeled object, the tool quite often stops working normally.

Poke.
It is still not fixed.

Not only with small objects but with big objects too.
Why this poorly tested tool was implemented in master, but well working vertex paint is not?

Poke. It is still not fixed. Not only with small objects but with big objects too. Why this poorly tested tool was implemented in master, but well working vertex paint is not?

Please delete this tool, It do not work in most cases.
It should not to be present in master in that state as it now have
2022-01-30_00-32-30.mp4

Please delete this tool, It do not work in most cases. It should not to be present in master in that state as it now have [2022-01-30_00-32-30.mp4](https://archive.blender.org/developer/F12834186/2022-01-30_00-32-30.mp4)

In #88579#1297621, @Vyach wrote:
Please delete this tool, It do not work in most cases.
It should not to be present in master in that state as it now have
2022-01-30_00-32-30.mp4

No, don't delete it. FIX it. This tool is crucial for architecture modelling, but it should work properly. Please, prioritize fixing scale cage.

> In #88579#1297621, @Vyach wrote: > Please delete this tool, It do not work in most cases. > It should not to be present in master in that state as it now have > [2022-01-30_00-32-30.mp4](https://archive.blender.org/developer/F12834186/2022-01-30_00-32-30.mp4) No, don't delete it. FIX it. This tool is crucial for architecture modelling, but it should work properly. Please, prioritize fixing scale cage.

In #88579#1297759, @michalpe wrote:
No, don't delete it. FIX it. This tool is crucial for architecture modelling, but it should work properly. Please, prioritize fixing scale cage.

Yes, fix is more desirable, but as far as it do not work, it can`t be in the master

> In #88579#1297759, @michalpe wrote: > No, don't delete it. FIX it. This tool is crucial for architecture modelling, but it should work properly. Please, prioritize fixing scale cage. Yes, fix is more desirable, but as far as it do not work, it can`t be in the master

The topic is called "Selecting center handles of Scale Change does not work for small objects", but I would say that this tool simply does not work under any circumstances with more complex objects than a cube.

The topic is called "Selecting center handles of Scale Change does not work for small objects", but I would say that this tool simply does not work under any circumstances with more complex objects than a cube.
Philipp Oeser changed title from Selecting center handles of Scale Cage does not work for small objects to Scale Cage doesn't work well for small/large objects 2022-01-31 10:42:13 +01:00

In #88579#1298100, @BulatKR wrote:
The topic is called "Selecting center handles of Scale Change does not work for small objects", but I would say that this tool simply does not work under any circumstances with more complex objects than a cube.

Even a cube can be problematic, depending on the view angle.
I made a similar topic, but someone made a wrong decision of merging the two topics, while my case presents a different side of this problem - scale cage would pick wrong handle under certain view angles in 3D, regardless of object size:
https://developer.blender.org/T91517

> In #88579#1298100, @BulatKR wrote: > The topic is called "Selecting center handles of Scale Change does not work for small objects", but I would say that this tool simply does not work under any circumstances with more complex objects than a cube. Even a cube can be problematic, depending on the view angle. I made a similar topic, but someone made a wrong decision of merging the two topics, while my case presents a different side of this problem - scale cage would pick wrong handle under certain view angles in 3D, regardless of object size: https://developer.blender.org/T91517

@michalpe, let`s wait a patch. If there was the same reason, your case will be fixed too,
Otherwise ask to reopen and de-merge under your report.

@michalpe, let`s wait a patch. If there was the same reason, your case will be fixed too, Otherwise ask to reopen and de-merge under your report.

Added subscriber: @lictex_1

Added subscriber: @lictex_1

size of the selection area is in world space instead of screen space, this is the real cause of this issue imo
handles on a small object will overlap together, and on a large object it will become so small for clicking
#91517 should be same, hitboxes in that file might look like this
image.png
try dragging on the non-overlapping area, or simply scale up the entire object by 10x, it should be able to pick up the correct axis

this tool simply does not work under any circumstances with more complex objects than a cube.

afaik this tool works on object level and the mesh data underlying shouldn't matter a lot. maybe a .blend file helps showing the problem

size of the selection area is in world space instead of screen space, this is the real cause of this issue imo handles on a small object will overlap together, and on a large object it will become so small for clicking #91517 should be same, hitboxes in that file might look like this ![image.png](https://archive.blender.org/developer/F12838774/image.png) try dragging on the non-overlapping area, or simply scale up the entire object by 10x, it should be able to pick up the correct axis > this tool simply does not work under any circumstances with more complex objects than a cube. afaik this tool works on object level and the mesh data underlying shouldn't matter a lot. maybe a .blend file helps showing the problem

I dragged over non-overlapping area, with a simple box. My case can't possibly be simpler, and it still doesn't work properly. If you navigate to my thread:
https://developer.blender.org/T91517
you'll see an attached .blend.

I dragged over non-overlapping area, with a simple box. My case can't possibly be simpler, and it still doesn't work properly. If you navigate to my thread: https://developer.blender.org/T91517 you'll see an attached .blend.

This issue was referenced by f7a6e8db04

This issue was referenced by f7a6e8db04bc3f61e4e7ef6e6b07eaef9ce15066

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Campbell Barton self-assigned this 2022-02-04 05:38:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88579
No description provided.