Fix T88579: scale cage doesn't work well for small/large objects

Apply proper view scale for cage 3d's draw_select,
same as draw.

Reviewed By: campbellbarton

Ref D13956